--- a/2tri/listaAtividades_02/01_trocarVariaveis.html
+++ b/2tri/listaAtividades_02/01_trocarVariaveis.html
@@ -7,7 +7,7 @@
     */
 
     //ENTRADA
-    let valor1 = Number(prompt(`Informe um número inteiro:`).trim());
+    let valor1 = parseInt(prompt(`Informe um número inteiro:`).trim());
     let valor2 = Number(prompt(`Informe outro número inteiro:`).trim());
 
     //PROCESSAMENTO
