--- a/2tri/switch_case/05_investigacaoCriminal.html
+++ b/2tri/switch_case/05_investigacaoCriminal.html
@@ -7,15 +7,59 @@
     - "Mora perto da vítima?"
     - "Devia para a vítima?"
     - "Já trabalhou com a vítima?"
-    O script deve no final emitir uma classificação sobre a participação da pessoa no crime. Se a pessoa responder positivamente a 2 questões ela deve ser classificada como "Suspeita", entre 3 e 4 como "Cúmplice" e 5 como "Assassino". Caso contrário, ele será classificado como "Inocente".
+    O script deve no final emitir uma classificação sobre a participação da pessoa no crime. Se a pessoa responder 
+    positivamente a 2 questões ela deve ser classificada como "Suspeita", entre 3 e 4 como "Cúmplice" e 5 como "Assassino". 
+    Caso contrário, ele será classificado como "Inocente".
     */
 
     //ENTRADA
+    const p1 = prompt(`Telefonou para a vítima?`).trim().toLowerCase();
+    const p2 = prompt(`Esteve no local do crime?`).trim().toLowerCase();
+    const p3 = prompt(`Mora perto da vítima?`).trim().toLowerCase();
+    const p4 = prompt(`Devia para a vítima?`).trim().toLowerCase();
+    const p5 = prompt(`Já trabalhou para a vítima?`).trim().toLowerCase();
+    let sins = 0;
 
-    
-    //PROCESSAMENTO
+    switch (p1) {
+        case "s":
+            sins++;
+            break;
+    }
+    switch (p2) {
+        case "s":
+            sins++;
+            break;
+    }
+    switch (p3) {
+        case "s":
+            sins++;
+            break;
+    }
+    switch (p4) {
+        case "s":
+            sins++;
+            break;
+    }
+    switch (p5) {
+        case "s":
+            sins++;
+            break;
+    }
 
+    switch (sins) {
+        case 2:
+            alert(`Você é suspeito.`)
+            break;
+        case 3:
+        case 4:
+            alert(`Você é cumplice.`)
+            break;
+        case 5:
+            alert(`Você é o assassino.`)
+        default:
+            alert(`Você é inocente.`)
+            break;
+    }
 
-    //SAÍDA
 
 </script>
