--- a/2tri/lista arrays/05_adicionarSUV.html
+++ b/2tri/lista arrays/05_adicionarSUV.html
@@ -6,7 +6,9 @@
     //Apresente a lista antiga de SUVs e a nova lista, após a adição do veículo solicitado.
 
     //ENTRADA
-
+    let carrosSUVA = ["tiggo", "sportage", "tucson", "ecosport"];
+    let carrosSUVN = ["tiggo", "sportage", "tucson", "ecosport"];
+    const adicionar = prompt(`qual carro você deseja remover: (tiggo, sportage, tucson ou ecosport)`)
 
     //PROCESSAMENTO
 
