--- a/2tri/lista arrays/04_removerSUV.html
+++ b/2tri/lista arrays/04_removerSUV.html
@@ -6,7 +6,10 @@
     //Apresente a lista antiga de SUVs e a nova lista, após a remoção do veículo solicitado.
 
     //ENTRADA
+    let carrosSUV = ["tiggo", "sportage", "tucson", "ecosport"];
+    const remove = prompt(`Qual carro você deseja remover?`);
 
+    
 
     //PROCESSAMENTO
 
