--- a/2tri/lista arrays/04_removerSUV.html
+++ b/2tri/lista arrays/04_removerSUV.html
@@ -6,14 +6,16 @@
     //Apresente a lista antiga de SUVs e a nova lista, após a remoção do veículo solicitado.
 
     //ENTRADA
-    let carrosSUV = ["tiggo", "sportage", "tucson", "ecosport"];
-    const remove = prompt(`Qual carro você deseja remover?`);
-
-    
+    let carrosSUV = ["Tiggo", "Sportage", "Tucson", "EcoSport"];
+    let carrosSUVA = ["Tiggo", "Sportage", "Tucson", "EcoSport"];
+    const remover = prompt(`Qual veículo você deseja remover: ${carrosSUV.join(", ")}`);
+    const removidos = []
 
     //PROCESSAMENTO
-
+    const posicao = carrosSUV.indexOf(remover)
+    removidos.push(carrosSUV.splice(posicao, 1))
 
     //SAÍDA
-
+    alert(`Lista antiga: ${carrosSUVA.join(", ")}. Lista nova: ${carrosSUV.join(", ")}.`)
+    
 </script>
