--- a/2tri/lista arrays/08_procuraLetra.html
+++ b/2tri/lista arrays/08_procuraLetra.html
@@ -1,16 +1,21 @@
 <script>
-    //Problema: Procurar letra
-    //Peça para o usuário digitar UMA palavra.
-    //Peça para o usuário digitar a letra que deseja encontrar na palavra que acabou de digitar.
+  //Problema: Procurar letra
+  //Peça para o usuário digitar UMA palavra.
+  //Peça para o usuário digitar a letra que deseja encontrar na palavra que acabou de digitar.
 
-    //Apresente para o usuário se a LETRA que ele quer procurar existe ou não na palavra digitada e qual a primeira posição da LETRA na PALAVRA.
+  //Apresente para o usuário se a LETRA que ele quer procurar existe ou não na palavra digitada e qual a primeira posição da LETRA na PALAVRA.
 
-    //ENTRADA
+  //ENTRADA
+  const palavra = prompt(`Ìnforme uma palavra:`);
+  const letra = prompt(`Informe uma letra:`);
 
+  let arrayPalavra = [palavra].toString();
 
-    //PROCESSAMENTO
+  let letraProcurada = arrayPalavra.indexOf(letra, 0);
 
-
-    //SAÍDA
-
+  if (letraProcurada === -1) {
+    alert(`Essa letra não existe na ${palavra}`);
+  } else if (letraProcurada !== -1) {
+    alert(`Essa letra existe e está na posição ${letraProcurada + 1}`);
+  } 
 </script>
