--- a/2tri/lista arrays/07_acertarCor.html
+++ b/2tri/lista arrays/07_acertarCor.html
@@ -1,25 +1,37 @@
 <script>
-    //Problema: Acertar cor
-    //Crie o seguinte array, que contém sete elementos:
-    // const nomeCores = ["azul", "amarelo", "verde", "branco", "preto", "marrom", "cinza"];
-    //Peça para o usuário informar uma cor.
-    //Faça o programa armazenar um número aleatório (entre 0 e 6).
-    //Caso o usuário acerte a cor, que está na posição do array que coincide com o número aleatório gerado pelo computador, o programa deverá retornar:
-    //PARABÉNS! VOCÊ ESTÁ COM SORTE NA COR ${corInformada}!
-    //Caso não acerte, o programa deverá retornar:
-    //NÃO FOI DESSA VEZ... TENTE NOVAMENTE!
+  //Problema: Acertar cor
+  //Crie o seguinte array, que contém sete elementos:
+  // const nomeCores = ["azul", "amarelo", "verde", "branco", "preto", "marrom", "cinza"];
+  //Peça para o usuário informar uma cor.
+  //Faça o programa armazenar um número aleatório (entre 0 e 6).
+  //Caso o usuário acerte a cor, que está na posição do array que coincide com o número aleatório gerado pelo computador, o programa deverá retornar:
+  //PARABÉNS! VOCÊ ESTÁ COM SORTE NA COR ${corInformada}!
+  //Caso não acerte, o programa deverá retornar:
+  //NÃO FOI DESSA VEZ... TENTE NOVAMENTE!
 
-    //ENTRADA
+  //ENTRADA
+  
+  const nomeCores = [
+    "azul",
+    "amarelo",
+    "verde",
+    "branco",
+    "preto",
+    "marrom",
+    "cinza",
+  ];
+  const corInformada = Number(
+    prompt(`0-azul, 1-amarelo, 2-verde, 3-branco, 4-preto, 5-marrom, 6-cinza`)
+  );
+  const numeroAleatorio = Math.floor(Math.random() * 7);
 
+  if (corInformada === numeroAleatorio) {
+    alert(`PARABÉNS! VOCÊ ESTÁ COM SORTE NA COR ${nomeCores[corInformada]}!`);
+  } else {
+    alert(`NÃO FOI DESSA VEZ... TENTE NOVAMENTE!`);
+  }
 
-    //PROCESSAMENTO
-
-
-    //SAÍDA
-
-
-
-    /*
+  /*
     Para gerar números aleatórios, há a função random, da biblioteca Math. Nesse caso, o comando deverá ser o Math.random().
     Contudo, o Math.random() irá gerar um número aleatório no intervalo entre 0 e 1, por exemplo, 0.678234283472.
     Para chegarmos no intervalo que queremos, devemos multiplicar o número randômico por 7 e também usar a função Math.floor() para arredondar para baixo.
