--- a/3tri/lista_for...of/02_listaFemiMasc.html
+++ b/3tri/lista_for...of/02_listaFemiMasc.html
@@ -8,9 +8,28 @@
 
     //ENTRADA
     let listaDeNomes = ["João", "Maria", "José", "Amanda", "Beatriz", "Júlio", "Olívia"];
+    let macho = [];
+    let femea = [];
 
     //PROCESSAMENTO
-    for(let)
-    //SAÍDA
+    for (macho of listaDeNomes) {
+        if (prompt(`${listaDeNomes[0]}: masculino(M) ou feminino(F)?`).toUpperCase() == "M") macho.push(listaDeNomes.slice(0, 1));
+        else femea.push(listaDeNomes.slice())
+        if (prompt(`${listaDeNomes[1]}: masculino(M) ou feminino(F)?`).toUpperCase() == "M") macho.push(listaDeNomes.slice(1, 1));
+        else femea.push(listaDeNomes.slice())
+        if (prompt(`${listaDeNomes[2]}: masculino(M) ou feminino(F)?`).toUpperCase() == "M") macho.push(listaDeNomes.slice(2, 1));
+        else femea.push(listaDeNomes.slice())
+        if (prompt(`${listaDeNomes[3]}: masculino(M) ou feminino(F)?`).toUpperCase() == "M") macho.push(listaDeNomes.slice(3, 1));
+        else femea.push(listaDeNomes.slice())
+        if (prompt(`${listaDeNomes[4]}: masculino(M) ou feminino(F)?`).toUpperCase() == "M") macho.push(listaDeNomes.slice(4, 1));
+        else femea.push(listaDeNomes.slice())
+        if (prompt(`${listaDeNomes[5]}: masculino(M) ou feminino(F)?`).toUpperCase() == "M") macho.push(listaDeNomes.slice(5, 1));
+        else femea.push(listaDeNomes.slice())
+        if (prompt(`${listaDeNomes[6]}: masculino(M) ou feminino(F)?`).toUpperCase() == "M") macho.push(listaDeNomes.slice(6, 1));
+        else femea.push(listaDeNomes.slice())
+    }
 
+    //SAÍDA
+    alert(macho.join(", "));
+    alert(femea.join(", "));
 </script>
