--- a/3tri/lista_for...of/03_listaParesImpares.html
+++ b/3tri/lista_for...of/03_listaParesImpares.html
@@ -6,11 +6,19 @@
     //Separe os números pares e os números ímpares em listas distintas e apresente as listas de forma crescente e forma descrescente.
 
     //ENTRADA
-
+    let listaDeNumeros = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+    let par = [];
+    let impar = [];
 
     //PROCESSAMENTO
-
+    for(let numeros of listaDeNumeros) {
+        if(numeros % 2 === 0) par.push(numeros);
+        else impar.push(numeros);
+        par.sort((a, b) => a-b);
+        impar.sort((a, b) => a-b);
+    }
 
     //SAÍDA
-
+    alert(`Números pares em ordem crescentes: ${par.join(', ')} e decrescentes: ${par.reverse().join(', ')}`);
+    alert(`Números impares em ordem crescentes: ${impar.join(', ')} e decrescentes: ${impar.reverse().join(', ')}`);    
 </script>
