--- a/3tri/lista_for...of/06_buscarJoao.html
+++ b/3tri/lista_for...of/06_buscarJoao.html
@@ -6,9 +6,13 @@
     //Identifique todos os nomes que contém "João" em qualquer parte do nome e separe-os em uma lista. Apresente a lista ao final do programa. Considere que poderão haver "Joãos" sem ~ (til).
 
     //ENTRADA
+    let listaDeNomes = ["João Pedro", "Gabriel José", "Ulisses Joao", "Pedro Henrique", "João da Silva", "João Henrique", "Alisson João"];
 
     //PROCESSAMENTO
-    
+    let listaJoao = [];
+    for (const nomes of listaDeNomes) {
+        if(nomes.toLowerCase().includes('joão') || nomes.toLowerCase().includes('joao')) listaJoao.push(nomes);
+    }
     //SAÍDA
-
+    alert(listaJoao.join(', '));
 </script>
