não aguento mais

--- a/3tri/for-Controle/02_mediaDoAluno.html
+++ b/3tri/for-Controle/02_mediaDoAluno.html
@@ -1,20 +1,21 @@
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <script>
-    /*
+  /*
     PROBLEMA
-    Pergunte ao professor quantas notas o aluno obteve. Na sequência, usando for, peça para o professor informar todas as notas do aluno.
+    Pergunte ao professor quantas notas o aluno obteve. Na sequência, usando for, 
+    peça para o professor informar todas as notas do aluno.
     Calcule a média das notas e apresente o resultado na tela.
     */
 
-    //ENTRADA
-    const qn = parseInt(prompt(`Informe quantas notas o alune obteve:`))
+  //ENTRADA
+  const qn = parseInt(prompt(`Informe quantas notas o alune obteve:`));
+  let notas = [];
 
-    //PROCESSAMENTO
-    for (let index = 0; index < array.length; index++) {
-        const element = array[index];
-        
-    }
+  //PROCESSAMENTO
+  for (let i = 0; i < notas.length; i++) {
+    const element = notas[i];
+    
+  }
 
-    //SAÍDA
-
+  //SAÍDA
 </script>
