--- a/3tri/for-Controle/05_validarNumeroPrimo.html
+++ b/3tri/for-Controle/05_validarNumeroPrimo.html
@@ -1,16 +1,22 @@
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <script>
-    /*
+  /*
     PROBLEMA
-    Faça um programa que peça para o usuário informar um número. Identifique se o número fornecido pelo usuário é um número primo e apresente na tela.
+    Faça um programa que peça para o usuário informar um número.
+    Identifique se o número fornecido pelo usuário é um número primo e apresente na tela.
     */
 
-    //ENTRADA
+  //ENTRADA
+  let num = [];
+  const n = parseInt(prompt(`Informe um número:`));
 
+  //PROCESSAMENTO
+  for (let i = 2; i < num; i++) {
+    if(n !== 1) alert(`${n} é primo.`);
+    num.push(n);
+  }
 
-    //PROCESSAMENTO
-
-
-    //SAÍDA
-
+  //SAÍDA
+  console.log(num)
+  alert(num);
 </script>
