--- a/3tri/for-Controle/06_imprimirNumeros.html
+++ b/3tri/for-Controle/06_imprimirNumeros.html
@@ -2,15 +2,30 @@
 <script>
     /*
     PROBLEMA
-    Faça um programa que pergunte ao usuário um número inicial e um número final. Verifique se o número inicial é menor que o número final e apresente na tela os números ímpares e os números pares que estão entre os dois números. Se o número inicial for maior ou igual ao número final, apresente mensagem de erro para o usuário, informando a regra para o número inicial e número final.
+    Faça um programa que pergunte ao usuário um número inicial e um número final. 
+    Verifique se o número inicial é menor que o número final e apresente na tela os números ímpares e os números pares que estão entre os dois números. 
+    Se o número inicial for maior ou igual ao número final, apresente mensagem de erro para o usuário, informando a regra para o número inicial e número final.
     */
 
     //ENTRADA
-
+    const n1 = parseInt(prompt(`Informe um número:`))
+    const n2 = parseInt(prompt(`Informe outro número:`))
+    let par = []
+    let impar = []
     
     //PROCESSAMENTO
-
+    if(n1 > n2) {
+        for (let i = n1; i < n2; i++) {
+            Math.ceil(i)
+            if(i % 2 == 0) par.push(i)
+            else impar.push(i)
+        }
+    }
+    else {
+        alert(`Resposta inválida.`)
+        window.location.reload(true)
+    }
     
     //SAÍDA
-
+    document.write(`Números pares: ${par.join(', ')}. Numeros Impares: ${impar.join(', ')}.`)
 </script>
