--- a/3tri/for...of complementar/08_cidadesEstados.html
+++ b/3tri/for...of complementar/08_cidadesEstados.html
@@ -4,15 +4,27 @@
     Considere a seguinte lista de Cidades:
     let cidades = ["Porto Alegre", "Curitiba", "Florianópolis", "Joinville", "Blumenau", "Gramado", "Santa Maria", "Londrina", "Itajaí"];
     Pergunte ao usuário a qual estado pertence cada uma das cidades e adicione em listas separadas, sendo uma lista para cada estado.
-    No final do programa apresente os estados com as suas respectivas cidades. Porém, ordene a apresentação das listas, apresentando de forma decrescente pela quantidade de cidades que o estado possui.
+    No final do programa apresente os estados com as suas respectivas cidades. Porém, ordene a apresentação das listas, 
+    apresentando de forma decrescente pela quantidade de cidades que o estado possui.
     */
 
     //Entrada
-
+    let cidades = ["Porto Alegre", "Curitiba", "Florianópolis", "Joinville", "Blumenau", "Gramado", "Santa Maria", "Londrina", "Itajaí"];
+    let sc = []
+    let pr = []
+    let rs = []
 
     //Processamento
-
+    for (const estado of cidades) {
+        let est = prompt(`A qual estado pertence ${estado}?`).toLowerCase()
+        if(est == 'sc') sc.push(estado)
+        else if(est == 'pr') pr.push(estado)
+        else rs.push(estado)
+    }
+    sc.sort((a, b) => b - a)
+    pr.sort((a, b) => b - a)
+    rs.sort((a, b) => b - a)
 
     //Saída
-
+    document.write()
 </script>
