--- a/3tri/for-Controle/06_imprimirNumeros.html
+++ b/3tri/for-Controle/06_imprimirNumeros.html
@@ -1,31 +1,33 @@
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <script>
-    /*
+  /*
     PROBLEMA
     Faça um programa que pergunte ao usuário um número inicial e um número final. 
     Verifique se o número inicial é menor que o número final e apresente na tela os números ímpares e os números pares que estão entre os dois números. 
     Se o número inicial for maior ou igual ao número final, apresente mensagem de erro para o usuário, informando a regra para o número inicial e número final.
     */
 
-    //ENTRADA
-    const n1 = parseInt(prompt(`Informe um número:`))
-    const n2 = parseInt(prompt(`Informe outro número:`))
-    let par = []
-    let impar = []
-    
-    //PROCESSAMENTO
-    if(n1 > n2) {
-        for (let i = n1; i < n2; i++) {
-            Math.ceil(i)
-            if(i % 2 == 0) par.push(i)
-            else impar.push(i)
-        }
+  //ENTRADA
+  let numeroInicial = Number(prompt(`Insira o número inicial`));
+  let numeroFinal = Number(prompt(`Insira o número final`));
+  let pares = [];
+  let impares = [];
+
+  //PROCESSAMENTO
+  if (numeroFinal > numeroInicial) {
+    for (i = numeroInicial; i <= numeroFinal; i++) {
+      Math.ceil(i);
+      if (i % 2 == 0) pares.push(i);
+      else impares.push(i);
     }
-    else {
-        alert(`Resposta inválida.`)
-        window.location.reload(true)
-    }
-    
-    //SAÍDA
-    document.write(`Números pares: ${par.join(', ')}. Numeros Impares: ${impar.join(', ')}.`)
+  } else {
+    alert(`Valor Inválido!`);
+    window.location.reload(true);
+  }
+
+  //SAÍDA
+  document.write(`Os números pares entre ${numeroInicial} e ${numeroFinal} são: ${pares.join(
+    ", "
+  )} <br> 
+    Os números ímpares são: ${impares.join(", ")}`);
 </script>
