--- a/3tri/for-Controle/11_multiplos3.html
+++ b/3tri/for-Controle/11_multiplos3.html
@@ -1,15 +1,19 @@
 <script>
-    /*
+  /*
     PROBLEMA: Múltiplos de 3
     Criar um programa que imprima todos os números múltiplos de 3 entre 1 e 100. Calcule a soma dos números.
     */
 
-    //ENTRADA
+  //ENTRADA
+  let multiplos = [];
 
+  //PROCESSAMENTO
+  for (i = 100; i >= 3; i--) {
+    if (i / 3 == Math.round(i / 3)) multiplos.push(i);
+  }
+  multiplos.sort((a, b) => a - b);
 
-    //PROCESSAMENTO
-
-
-    //SAÍDA
-
+  //SAÍDA
+  alert(multiplos.join(", "));
+  
 </script>
