--- a/3tri/for-Controle/12_investimentos.html
+++ b/3tri/for-Controle/12_investimentos.html
@@ -5,14 +5,15 @@
     */
 
   //ENTRADA
-  let multiplos = [];
+  investimento = 1000;
+  let dias = 0;
 
   //PROCESSAMENTO
-  for (i = 100; i >= 3; i--) {
-    if (i / 3 == Math.round(i / 3)) multiplos.push(i);
+  for (dias = 0; investimento <= 2000; dias++) {
+    investimento *= 1.02;
   }
-  multiplos.sort((a, b) => a - b);
 
   //SAÍDA
-  alert(multiplos.join(", "));
+  alert(`Demorou ${dias} dias para alcancar os R$${investimento.toFixed(2).replace(".", ",")} de investimento`);
+
 </script>
