--- a/3tri/Lista_doWhile/07_pesquisaIdade.html
+++ b/3tri/Lista_doWhile/07_pesquisaIdade.html
@@ -13,10 +13,15 @@
     */
 
     //Entrada
-
+    let i = 1;
+    let masc = 0;
+    let fem = 0;
+    let salario = 0;
 
     //Processamento
-
+    while () {
+        
+    }
 
     //Saída
 
