vkc mçfkn lso f

--- a/3tri/function/03_conversaoFahrenheit.html
+++ b/3tri/function/03_conversaoFahrenheit.html
@@ -6,10 +6,10 @@
     F = (9 * C + 160) / 5
     */
 
-    let c = Number(prompt(`Informe uma temperatura em graus celsius`))
+    let c = Number(prompt(`Informe uma temperatura em graus celsius`));
     
     function conversao(c) {
-        alert(`Celsius: ${c}; Fahrenheit: ${((9 * c + 160) / 5)}.`)
+        alert(`Celsius: ${c}; Fahrenheit: ${(9 * c + 160) / 5}.`);
     }
-    conversão(c)
+    conversao(c);
 </script>
