--- a/3tri/function/05_areaTriangulo.html
+++ b/3tri/function/05_areaTriangulo.html
@@ -6,11 +6,15 @@
     */
 
     //Entrada
-
-
+    let b = Number(prompt(`INforme a base do triangulo:`))
+    let h = Number(prompt(`Informe a altura do triangulo`))
+    let  area = calculo(b, h)
+    
     //Processamento
-
+    function calculo(base, altura) {
+        alert((b * h) / 2)
+    }
 
     //Saída
-
+    calculo(base, altura)
 </script>
