--- a/3tri/function/08_IMC.html
+++ b/3tri/function/08_IMC.html
@@ -6,11 +6,14 @@
     */
 
     //Entrada
-
+    let p = Number(prompt(`Informe seu peso:`))
+    let a = Number(prompt(`Informe sua altura:`))
 
     //Processamento
-
+    function calculo(p, a) {
+        alert(p / a ** 2)
+    }
 
     //Saída
-
+    calculo(p, a)
 </script>
