--- a/3tri/function/04_conversaoCelsius.html
+++ b/3tri/function/04_conversaoCelsius.html
@@ -1,16 +1,19 @@
 <script>
     /*
     Problema: Conversão para Celsius
-    Desenvolva um programa em JavaScript que contenha uma função para a conversão de uma temperatura em graus Fahrenheit para Celsius. A fórmula de conversão é a seguinte:
+    Desenvolva um programa em JavaScript que contenha uma função para a conversão de uma temperatura em graus Fahrenheit para Celsius. 
+    A fórmula de conversão é a seguinte:
     C = (F - 32) * 5 / 9
     */
 
     //Entrada
-
+    let F = Number(prompt(`Informe uma temperatra em fahrenheit:`))
 
     //Processamento
-
+    function conversao (F) {
+        alert(` Fahrenheit: ${F}; Celsius: ${(F - 32) * 5 / 9}`)
+    }
 
     //Saída
-
+    conversao(F)
 </script>
