--- a/3tri/function/09_fatorial.html
+++ b/3tri/function/09_fatorial.html
@@ -6,19 +6,17 @@
     */
 
     //Entrada
-    let n = parseInt(prompt(`informe um número inteiro:`))
-    let soma = 0;
-    let fatorial = 0;
+    let numero = parseInt(prompt(`informe um número inteiro:`))
 
     //Processamento
-    function calculo(n) {
-        for (let i = n - 1; i < n; i--) {
-            fatorial = n * i;
-            soma += fatorial;
-            alert(soma)
+    function fatorial(numero) {
+        if (numero == 1) {
+            return 1;
+        } else {
+            return numero * fatorial(numero - 1);
         }
     }
+    let resultado = fatorial(numero);
+    alert(resultado);
 
-    //Saída
-    calculo(n)
 </script>
