--- a/3tri/function/11_verificaPrimo.html
+++ b/3tri/function/11_verificaPrimo.html
@@ -1,15 +1,26 @@
 <script>
     /*
     Problema: Verificar número primo
-    Desenvolva um programa que contenha uma função JavaScript para verificar se o número fornecido pelo usuário é um número primo ou não. Um número primo é aquele que é divisível apenas por 1 e por ele mesmo. Por exemplo, o número 7 é primo, pois só é divisível por 1 e por 7. O número 8 não é primo, pois é divisível por 1, por 2, por 4 e por 8.
+    Desenvolva um programa que contenha uma função JavaScript para verificar se o número fornecido pelo usuário é um número primo ou não. 
+    Um número primo é aquele que é divisível apenas por 1 e por ele mesmo. Por exemplo, o número 7 é primo, pois só é divisível por 1 e por 7. 
+    O número 8 não é primo, pois é divisível por 1, por 2, por 4 e por 8.
     */
 
     //Entrada
-
-
+    const n = Number(prompt(`INforme um número:`))
+    let divisivel = 0;
+    
     //Processamento
-
+    function calculo(n) {
+        for (let i = 1; i <= n; i++) {
+            if (n % i == 0) {
+                divisivel++;
+            }
+        }
+    }
 
     //Saída
-
+    if (divisivel == 2) alert(`O número ${n} é primo`);
+    else alert(`O número ${n} não é primo`);
+    calculo(n)
 </script>
