--- a/3tri/function/10_contarLetra.html
+++ b/3tri/function/10_contarLetra.html
@@ -1,5 +1,5 @@
 <script>
-    /*
+  /*
     Problema: Contar Letra
     Desenvolva uma função que receba uma frase e uma letra e retorne quantas vezes a letra aparece na frase. 
     A função deve ignorar se a letra é maiúscula ou minúscula. Por exemplo, se o usuário informar a frase "Araquari" e a letra "a", 
@@ -7,12 +7,22 @@
     *A frase (ou palavra) e a letra devem ser fornecidas pelo usuário.
     */
 
-    //Entrada
+  //Entrada
+  const resultado = contarPalavra(
+    prompt(`Escolha uma frase`).toLowerCase(),
+    prompt(`Escolha uma letra`).toLowerCase()
+  );
 
+  //Processamento
+  function contarPalavra(frase, letra, contador = 0) {
+    for (const varredor of frase) {
+      if (varredor === letra) {
+        contador++;
+      }
+    }
 
-    //Processamento
-
-
-    //Saída
-
+    if (contador === 0) return alert(`A letra ${letra} não existe na frase`);
+    else return alert(`A quantidade de vezes que a letra "${letra}" aparece na palavra ${frase} é: ${contador}`);
+  }
+  //Saída
 </script>
